course_project/manifests/service-todoapp.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-app-service
spec:
  type: NodePort
  selector:
    app: todo-app
  ports:
    - protocol: TCP
      nodePort: 30080
      port: 3000
      targetPort: 3000
